spring-payment/spring-payments-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-payments-api-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: spring-payments-api
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: spring-payments-api
    spec:
      containers:
      - name: spring-payments-api
        image: yanzai4/spring-payments-api:v3.0
        ports:
        - containerPort: 8080
