spring-payment/spring-payments-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-payments-api-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080 
  selector:
    name: spring-payments-api
